# python-website-monitor

./: .gitignore  LICENSE.md  Makefile  README.md  setup.cfg
.github/workflows/: python.yaml
dev/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
src/website_monitor/: kafka.py  sense.py  serde.py  store.py
test/: test_sense.py
