[metadata]
name = website_monitor
author = Markus Bertheau
author_email = mbertheau@gmail.com
license = MIT
version = 0.1
description = Monitor websites
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.11
  Topic :: Internet :: WWW/HTTP
  Topic :: System :: Monitoring

[options]
install_requires =
  aiokafka
  psycopg[binary]

[options.entry_points]
console_scripts =
  website_monitor_sense = website_monitor.sense:cli_entry
  website_monitor_store = website_monitor.store:cli_entry
